force-app/main/default/objects/OrderItemWeekPlans__c/OrderItemWeekPlans__c.object-meta.xml
<CustomObject>
    <label>OrderItem Week Plans</label>
    <nameField>
        <label>OrderItem Week Plans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItem Week Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>