force-app/main/default/objects/OrderItemWeekPlans__c/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <formula>ProdWeeksH__r.DateFrom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date From</label>
    <type>Date</type>
</CustomField>