force-app/main/default/objects/OrderItemWeekPlans__c/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <formula>ProdWeeksH__r.DateTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date To</label>
    <type>Date</type>
</CustomField>