force-app/main/default/objects/OrderItemWeekPlans__c/fields/OrderItemMonthPlan__c.field-meta.xml
<CustomField>
    <fullName>OrderItemMonthPlan__c</fullName>
    <label>OrderItemMonthPlan</label>
    <referenceTo>OrderItemMonthlyPlans__c</referenceTo>
    <relationshipLabel>OrderItem Week Plans</relationshipLabel>
    <relationshipName>OrderItem_Week_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>