force-app/main/default/objects/OrderItemWeekPlans__c/fields/OrderName__c.field-meta.xml
<CustomField>
    <fullName>OrderName__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; OrderItemMonthPlan__r.Order__r.Id, OrderItemMonthPlan__r.Order__r.AdditionalNumber__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>