force-app/main/default/objects/OrderItemWeekPlans__c/fields/PlanQty_t__c.field-meta.xml
<CustomField>
    <fullName>PlanQty_t__c</fullName>
    <label>Week Plan. Qty (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>