force-app/main/default/objects/OrderItemWeekPlans__c/fields/PlanType__c.field-meta.xml
<CustomField>
    <fullName>PlanType__c</fullName>
    <formula>CASE(TEXT(ProdPlanType__c),
						&apos;253&apos;,&apos;PRODUCTION&apos;,
						&apos;254&apos;,&apos;SHIPPING&apos;,
						&apos;N/A&apos;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>