force-app/main/default/objects/OrderItemWeekPlans__c/fields/ProdPlanType__c.field-meta.xml
<CustomField>
    <fullName>ProdPlanType__c</fullName>
    <label>Prod Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>253</fullName>
                <label>Production</label>
            </value>
            <value>
                <fullName>254</fullName>
                <label>Shipping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>