force-app/main/default/objects/OrderItemWeekPlans__c/fields/ProdWeeksH__c.field-meta.xml
<CustomField>
    <fullName>ProdWeeksH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdWeek</label>
    <referenceTo>ProdWeeksH__c</referenceTo>
    <relationshipLabel>OrderItem Week Plans</relationshipLabel>
    <relationshipName>OrderItem_Week_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>