force-app/main/default/objects/OrderItemWeekPlans__c/fields/ValidDate__c.field-meta.xml
<CustomField>
    <fullName>ValidDate__c</fullName>
    <label>Valid Date</label>
    <type>Date</type>
</CustomField>