force-app/main/default/objects/OrderItemWeekPlans__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>&quot;Week: &quot; + TEXT(ProdWeeksH__r.WeekNum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <type>Text</type>
</CustomField>