force-app/main/default/objects/OrderItemWeekPlans__c/fields/WeekNum__c.field-meta.xml
<CustomField>
    <fullName>WeekNum__c</fullName>
    <formula>ProdWeeksH__r.WeekNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>